Major bugfixes
